Performance reports generatiuon feature
